Update from December 9, 2022

--- a/69508-h/69508-h.htm
+++ b/69508-h/69508-h.htm
@@ -7593,9 +7593,9 @@ world. Any further consideration of Greek sarcophagi and of the Roman
 sarcophagi which succeeded them would take us into another province of
 the great empire of Hellenic antiquity.</p>
 
-<p class="c">THE END<span class="pagenum"><a id="page_260">{260}</a></span></p>
+<p>THE END<span class="pagenum"><a id="page_260">{260}</a></span></p>
 
-<p class="c">
+<p>
 OXFORD: HORACE HART<br>
 PRINTER TO THE UNIVERSITY<br>
 </p>
@@ -8387,10 +8387,10 @@ remarks of M. Reinach, <i>op. cit.</i> p. 325.</p></div>
 
 <div class="footnote"><p><a id="Footnote_327_327"></a><a href="#FNanchor_327_327"><span class="label">[327]</span></a> Robert, <i>Die antiken Sarkophag-Reliefs</i>, ii. pl. 27.</p></div>
 
-<p class="c">Typographical errors corrected by the etext transcriber: can scarely
+<p>Typographical errors corrected by the etext transcriber: can scarely
 have aimed=> can scarcely have aimed {pg 81}</p>
 
-<p class="c">in Attica, at Spata, and at Menidi=> in Attica, at Sparta, and at Menidi
+<p class="nind">in Attica, at Spata, and at Menidi=> in Attica, at Sparta, and at Menidi
 {pg 105}</p>
 
 </div>
